Veto paint-as-shader optimizations for large images

Ganesh needs to upload the backing image as a texture, and some mobile
devices are quite limited when it comes to the supported upload texture
size.

Update Image::ApplyShader to fail if either dimension is larger than the
minimum guaranteed ES2 upload texture size.  This triggers other/safer
fallback code paths.

BUG=676636

Change-Id: Ief18173eaff3b32367be5425884b0bd0681db8b0